[CrOS MultiDevice] Fix notification strings to be form-factor specific

Notifications refer to the current device as a "Chromebook" even when it
might be a Chromebox or Tablet. We should ensure that these descriptions
are accurate based on form factor.

Bug: 900680
Change-Id: I890db4eb0aff71ad0a67dac90dc50d2ed0bc1a3a
Reviewed-on: https://chromium-review.googlesource.com/c/1359458
Reviewed-by: James Cook <jamescook@chromium.org>
Reviewed-by: Kyle Horimoto <khorimoto@chromium.org>
Commit-Queue: Regan Hsu <hsuregan@chromium.org>
Cr-Commit-Position: refs/heads/master@{#613618}
Former-commit-id: 0bc0346d867e12764896dde5b54d388ba427ffdc