ash/multi_device_setup/multi_device_notification_presenter.cc
@@ -23,6 +23,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "chromeos/services/multidevice_setup/public/mojom/constants.mojom.h"
 #include "services/service_manager/public/cpp/connector.h"
 #include "ui/base/l10n/l10n_util.h"
+#include "ui/chromeos/devicetype_utils.h"
 #include "ui/message_center/message_center.h"
 #include "ui/message_center/public/cpp/notification_types.h"
 #include "ui/message_center/public/cpp/notifier_id.h"
@@ -115,8 +116,9 @@ MultiDeviceNotificationPresenter::~MultiDeviceNotificationPresenter() {
 void MultiDeviceNotificationPresenter::OnPotentialHostExistsForNewUser() {
   base::string16 title = l10n_util::GetStringUTF16(
       IDS_ASH_MULTI_DEVICE_SETUP_NEW_USER_POTENTIAL_HOST_EXISTS_TITLE);
-  base::string16 message = l10n_util::GetStringUTF16(
-      IDS_ASH_MULTI_DEVICE_SETUP_NEW_USER_POTENTIAL_HOST_EXISTS_MESSAGE);
+  base::string16 message = l10n_util::GetStringFUTF16(
+      IDS_ASH_MULTI_DEVICE_SETUP_NEW_USER_POTENTIAL_HOST_EXISTS_MESSAGE,
+      ui::GetChromeOSDeviceName());
   ShowNotification(Status::kNewUserNotificationVisible, title, message);
 }
 
@@ -131,8 +133,9 @@ void MultiDeviceNotificationPresenter::OnConnectedHostSwitchedForExistingUser(
   base::string16 title = l10n_util::GetStringFUTF16(
       IDS_ASH_MULTI_DEVICE_SETUP_EXISTING_USER_HOST_SWITCHED_TITLE,
       base::ASCIIToUTF16(new_host_device_name));
-  base::string16 message = l10n_util::GetStringUTF16(
-      IDS_ASH_MULTI_DEVICE_SETUP_EXISTING_USER_HOST_SWITCHED_MESSAGE);
+  base::string16 message = l10n_util::GetStringFUTF16(
+      IDS_ASH_MULTI_DEVICE_SETUP_EXISTING_USER_HOST_SWITCHED_MESSAGE,
+      ui::GetChromeOSDeviceName());
   ShowNotification(Status::kExistingUserHostSwitchedNotificationVisible, title,
                    message);
 }
@@ -140,10 +143,11 @@ void MultiDeviceNotificationPresenter::OnConnectedHostSwitchedForExistingUser(
 void MultiDeviceNotificationPresenter::OnNewChromebookAddedForExistingUser(
     const std::string& new_host_device_name) {
   base::string16 title = l10n_util::GetStringFUTF16(
-      IDS_ASH_MULTI_DEVICE_SETUP_EXISTING_USER_NEW_CHROMEBOOK_ADDED_TITLE,
+      IDS_ASH_MULTI_DEVICE_SETUP_EXISTING_USER_NEW_CHROME_DEVICE_ADDED_TITLE,
       base::ASCIIToUTF16(new_host_device_name));
-  base::string16 message = l10n_util::GetStringUTF16(
-      IDS_ASH_MULTI_DEVICE_SETUP_EXISTING_USER_NEW_CHROMEBOOK_ADDED_MESSAGE);
+  base::string16 message = l10n_util::GetStringFUTF16(
+      IDS_ASH_MULTI_DEVICE_SETUP_EXISTING_USER_NEW_CHROME_DEVICE_ADDED_MESSAGE,
+      ui::GetChromeOSDeviceName());
   ShowNotification(Status::kExistingUserNewChromebookNotificationVisible, title,
                    message);
 }
